challenge page covers and animation fix

--- a/src/pages/ChallengePage.css
+++ b/src/pages/ChallengePage.css
@@ -35,7 +35,6 @@
     max-width: 80%;
     max-height: 80%;
     width: 80%;
-    background-color: #e4e4e4;
     border-radius: 20px;
     line-height: var(--line-height);
     font-size: calc(var(--line-height) * 5/9);
@@ -86,7 +85,7 @@
     border: 1px solid gray;
 }
 
-.notebook-page, .animation-page, .front, .back{
+.notebook-page, .animation-page, .content-page, .front, .back{
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -100,11 +99,14 @@
     z-index: 2;
 }
 
+.animation-page-inner, .content-page, .front-cover{
+    transform-origin: 0% 0%;
+    transform-style: preserve-3d;
+}
+
 .animation-page .animation-page-inner{
     opacity: 0;
     z-index: 2;
-    transform-origin: 0% 0%;
-    transform-style: preserve-3d;
     position: relative;
     width: 100%;
     height: 100%;
@@ -171,13 +173,20 @@
     z-index: 3;
 }
 
-.notebook-cover{
-    border-left: 2rem solid rgb(var(--anon-color));
+
+.notebook-cover, .back-cover{
     background-color: #ffe3ef;
     background-image: url(/assets/notebook-bg.webp);
     background-size: cover;
     align-items: center;
     justify-content: space-around;
+}
+
+.notebook-cover{
+    border-left: 2rem solid rgb(var(--anon-color));
+}
+.back-cover{
+    border-right: 2rem solid rgb(var(--anon-color));
 }
 
 .notebook-cover p, .notebook-cover h1, .notebook-cover span{
@@ -194,22 +203,38 @@
     align-items: center;
 }
 
-.cloud {
+.cloud, .circle-clip{
     width: 90%;
-    aspect-ratio: 1;
-    background: rgb(var(--anon-color));
-    clip-path: url(#clip-path);
+    aspect-ratio: 1/1;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.cloud {
+    background: rgb(var(--anon-color));
+    clip-path: url(#clip-path);
+}
+
+.circle-clip{
+    width: 65%;
+}
+
 .notebook-cover-image{
     width: 90%;
     height: 90%;
-    clip-path: url(#clip-path);
     object-fit: cover;
 }
+
+.front-image{
+    clip-path: url(#clip-path);
+}
+
+.back-image{
+    border-radius: 50%;
+    border: 0.5rem solid rgb(var(--anon-color));
+}
+
 
 .notebook-cover-image{
     background-color: rgb(var(--saki-color));
@@ -218,13 +243,28 @@
 #anosaki-text{
     align-self: flex-end;
     padding-inline: 1rem;
+    translate: 0 -150%;
 }
+
 
 .nameplate-container{
     border: 2px solid rgb(var(--anon-color));
     width: 85%;
     border-radius: 10px;
     background-color: #fcf3e8;
+}
+
+.back-cover-text{
+    background-color: #fcf3e8;
+    padding: 1rem;
+    padding-top: 2rem;
+    width: 85%;
+    line-height: calc( var(--line-height) * 0.65);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.back-cover-text > p > :first-child{
+    color: rgb(var(--anon-color));
 }
 
 .nameplate-top{
@@ -295,6 +335,21 @@
     width: var(--line-height);
 }
 
+#copy-icon{
+    margin-left: 0.25rem;
+    width: 1rem;
+    fill: rgb(var(--saki-color-alpha));
+}
+
+#copy-icon:hover, #copy-icon:active{
+    fill: rgb(var(--saki-color));
+}
+
+#copy-icon:active{
+    fill: rgb(var(--saki-color));
+    translate: 0px 2px;
+}
+
 .close-button{
     position: absolute;
     bottom: 1rem;
@@ -336,6 +391,7 @@
 
 .cross{
     text-decoration: line-through 3px;
+    -webkit-text-decoration: line-through 3px;
 }
 
 .sticky-note-bottom-right-corner{
